# Federated_learning

./: DEFENSE_INSTRUCTIONS.py  DEFENSE_README.txt  DV2607-assignment-report.tex  FL_Analysis.ipynb  IMPLEMENTATION_SUMMARY.txt  README.md  README_ATTACK_SIMULATION.md  USAGE_GUIDE.txt  analysis_report.txt  analyze_defense.py  analyze_results.py  compare_defenses.py  defense_analysis_report.txt  malek_ssh  malek_ssh.pub  pyproject.toml  pyproject_defense.toml  pyproject_median.toml  requirements.txt  run_all_defenses.py  run_defense.py  run_defense_experiments.py  run_experiments.py  test_setup.py  view_results.py
Part_1-centralized/: Del_1.ipynb
flower2025/: __init__.py  client_app.py  server_app.py  server_app_defense.py  server_app_median.py  task.py
flower_env/: pyvenv.cfg
results/: metrics_FedAvgDefense_iid_0attackers.json  metrics_FedAvgDefense_iid_1attackers.json  metrics_FedAvgDefense_iid_2attackers.json  metrics_FedAvgDefense_non_iid_0attackers.json  metrics_FedAvgDefense_non_iid_1attackers.json  metrics_FedAvgDefense_non_iid_2attackers.json  metrics_FedAvg_iid_0attackers.json  metrics_FedAvg_iid_1attackers.json  metrics_FedAvg_iid_2attackers.json  metrics_FedAvg_non_iid_0attackers.json  metrics_FedAvg_non_iid_1attackers.json  metrics_FedAvg_non_iid_2attackers.json  metrics_FedProx_iid_0attackers.json  metrics_FedProx_iid_1attackers.json  metrics_FedProx_iid_2attackers.json  metrics_FedProx_non_iid_0attackers.json  metrics_FedProx_non_iid_1attackers.json  metrics_FedProx_non_iid_2attackers.json
